fixed a bug if a list of events had less than 5 events